# name-cr

./: README.md  pyproject.toml  server.py
static/: index.css  player.css  style.css
templates/: index.html  player.html
